# makeover-monday

./: .gitignore  README.md  pyproject.toml
cli/config/: __init__.py  inputs.py  paths.py
cli/generators/: __init__.py  base.py  metadata_generator.py  notebook_generator.py  readme_generator.py
cli/models/: __init__.py  challenge_input.py
cli/workflows/: __init__.py  create_challenge.py
src/charts/comparison/: __init__.py  basic_bar.py  grouped_bar.py  multi_line.py
src/charts/composition/: __init__.py  donut_chart.py  stacked_area.py
src/charts/distribution/: __init__.py  basic_hist.py  grouped_box.py
src/charts/trends/: __init__.py  area_trend.py
src/transformations/: __init__.py  data_imputer.py  duplicates.py  normalizer.py  outliers.py  type_converter.py
templates/: README_reto.md  metadata_template.yaml  notebook_base.ipynb
tests/: conftest.py
tests/charts/: test_comparison.py  test_composition.py  test_distribution.py
tests/cli/config/: test_inputs.py
tests/cli/generators/: test_generators.py
tests/cli/workflows/: test_create_challenge.py
tests/transformations/: test_data_imputer.py  test_duplicates.py  test_normalizer.py  test_outliers.py  test_type_converter.py
