# Configuración del build system
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Metadatos del proyecto (PEP 621)
[project]
name = "makeovermonday"
version = "0.1.0"
description = "Repositorio de retos semanales de MakeoverMonday y utilidades de soporte."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.7",
    "decorator==5.1.1",
    "et-xmlfile==1.1.0",
    "executing==2.1.0",
    "fastjsonschema==2.20.0",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "jedi==0.19.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "matplotlib-inline==0.1.7",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==2.1.2",
    "openpyxl==3.1.5",
    "packaging==24.1",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pydantic==2.8.2",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "prompt_toolkit==3.0.48",
    "psutil==6.0.0",
    "pure_eval==0.2.3",
    "Pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywin32==308",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "rpds-py==0.20.0",
    "six==1.16.0",
    "stack-data==0.6.3",
    "tenacity==9.0.0",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "tzdata==2024.2",
    "wcwidth==0.2.13",
]

# Disposición "src" para los módulos reutilizables
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-vv --cov=cli --cov=src --cov-report=term-missing --cov-fail-under=80"
testpaths = [
    "tests",
]
python_files = "test_*.py"
